--- a/apps/core-web/src/modules/Shell/Shell.module.scss
+++ b/apps/core-web/src/modules/Shell/Shell.module.scss
@@ -6,13 +6,15 @@
 }
 
 .sidebar {
-  @apply flex flex-col p-3 gap-2;
+  @apply flex flex-col;
 
   color: var(--primer-fg-default);
 }
 
 .sidebarHeader {
-  @apply flex items-center gap-2;
+  @apply flex items-center gap-2 p-2;
+
+  border-bottom: var(--spacing-px) solid var(--primer-border-muted);
 }
 
 .sidebarUserName {
@@ -39,12 +41,8 @@
   }
 }
 
-.sidebarDivider {
-  border-bottom: var(--spacing-px) solid var(--primer-border-muted);
-}
-
 .sidebarNav {
-  @apply flex flex-col gap-1;
+  @apply flex flex-col gap-1 p-3;
 }
 
 .contentHeader {
